add external ipv6 to /etc/hosts

--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -2,6 +2,7 @@
 - name: update apt cache
   apt: { update_cache: yes, cache_valid_time: 3600 }
 - include: hostname.yml
+  tags: hostname
 - include: journald.yml
 - include: sshd.yml
 # TODO: firewall on containers?
