--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -7,6 +7,7 @@
   tags: hostname
 - include: journald.yml
 - include: sshd.yml
+  tags: sshd
 # TODO: firewall on containers?
 - include: firewall.yml
 - include: mta.yml
