--- a/ansible/roles/haproxy/tasks/main.yml
+++ b/ansible/roles/haproxy/tasks/main.yml
@@ -38,8 +38,21 @@
 - name: configure haproxy
   lineinfile:
     dest: /etc/haproxy/haproxy.cfg
+    regexp: "{{ item.key | replace('.', '\\.') }}"
     insertafter: 'ssl-default-bind-options'
-    line: '	tune.ssl.default-dh-param 2048'
+    line: "	{{ item.key }} {{ item.value }}"
+  with_dict:
+    # https://mozilla.github.io/server-side-tls/ssl-config-generator/?server=haproxy
+    ssl-default-bind-ciphers: ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256
+    ssl-default-bind-options: no-sslv3 no-tlsv10 no-tlsv11 no-tls-tickets
+    ssl-default-server-ciphers: ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256
+    ssl-default-server-options: no-sslv3 no-tlsv10 no-tlsv11 no-tls-tickets
+  notify: restart haproxy
+- name: configure haproxy
+  lineinfile:
+    dest: /etc/haproxy/haproxy.cfg
+    regexp: tune\.ssl.default-dh-param
+    state: absent
   notify: restart haproxy
 - name: configure haproxy
   blockinfile:
