--- a/ansible/roles/lxd_host/tasks/main.yml
+++ b/ansible/roles/lxd_host/tasks/main.yml
@@ -68,8 +68,8 @@
 
 - name: add authorized_keys
   copy:
-    src: files/default_authorized_keys
     dest: "/var/lib/lxd/containers/{{ item.split('.')[0] }}/rootfs/root/.ssh/authorized_keys"
+    content: "{{ users_for_role.admin | map('extract', user_details) | map(attribute='public_keys') | join() }}"
     group: 100000 # TODO: subgid
     owner: 100000 # TODO: subuid
     mode: 0400
