Add libopenblas-dev to the buildkite agents

--- a/ansible/ci.yml
+++ b/ansible/ci.yml
@@ -134,6 +134,7 @@
         - libgtk-3-0
         - liblapack-dev
         - liblzo2-dev
+        - libopenblas-dev
         - libreadline-dev
         - libssl-dev
         - libxml2-dev
