run more buildkite agents on ci.dlang.io host
- matching number of vcpus

--- a/ansible/ci.yml
+++ b/ansible/ci.yml
@@ -9,7 +9,8 @@
 
 - hosts: lxd_hosts
   roles:
-    - lxd_host
+    - role: lxd_host
+      tags: lxd_host
     - role: users
       tags: users
       groups_for_roles:
