need llvm-dev to test ldc

--- a/ansible/ci.yml
+++ b/ansible/ci.yml
@@ -101,7 +101,7 @@
         - libxml2-dev
         - libxslt1-dev
         - libzmq3-dev
-        - llvm
+        - llvm-dev # ldc
         - mongodb-server
         - moreutils # sponge et.al.
         - pkg-config
