graceful stopping of agent
- wait a little for jobs to finish before stopping the agent
- also see https://github.com/buildkite/agent/issues/476

--- a/ansible/roles/buildkite_agent/handlers/main.yml
+++ b/ansible/roles/buildkite_agent/handlers/main.yml
@@ -1,3 +1,5 @@
 ---
+- name: systemctl daemon-reload
+  systemd: { daemon_reload: yes }
 - name: restart buildkite-agent
   service: { name: buildkite-agent, state: restarted }
