--- a/ansible/ci.yml
+++ b/ansible/ci.yml
@@ -73,7 +73,7 @@
         iptables-save > /etc/iptables/rules.v4;
         ip6tables-save > /etc/iptables/rules.v6
 
-- hosts: jenkins_slaves,buildkite_agents
+- hosts: buildkite_agents
   tasks:
     - name: test dependencies (1/2)
       apt: { name: "{{ item }}", install_recommends: no, update_cache: yes, cache_valid_time: 3600 }
@@ -142,15 +142,6 @@
   handlers:
     - name: restart mongodb
       service: { name: mongodb, state: restarted }
-
-- hosts: jenkins_slaves
-  vars:
-    - jenkins_url: https://ci.dlang.io/
-    - jenkins_admin_username: MartinNowak
-  vars_files:
-    - vars/passwords.yml # jenkins_admin_password
-  roles:
-    - jenkins_slave
 
 - hosts: buildkite_agents
   vars_files:
