--- a/ansible/roles/common/tasks/mta.yml
+++ b/ansible/roles/common/tasks/mta.yml
@@ -5,7 +5,7 @@
 - name: configure postfix mailertype
   debconf: { name: postfix, question: postfix/main_mailer_type, value: 'Internet Site', vtype: string }
 - name: install postfix and mailx
-  apt: { name: [postfix, heirloom-mailx], install_recommends: no }
+  apt: { name: [postfix, s-nail], install_recommends: no }
 - name: configure postfix interfaces
   lineinfile: { dest: /etc/postfix/main.cf, regexp: '^inet_interfaces = ',  line: 'inet_interfaces = loopback-only' }
   notify: restart postfix
