--- a/ansible/roles/lxd_host/handlers/main.yml
+++ b/ansible/roles/lxd_host/handlers/main.yml
@@ -1,5 +1,13 @@
 ---
+- name: systemctl daemon-reload
+  command: systemctl daemon-reload
 - name: reconfigure lxd
   command: dpkg-reconfigure --frontend noninteractive lxd
 - name: resolvconf
   command: resolvconf -u
+- name: restart systemd-resolved
+  service: { name: systemd-resolved, state: restarted }
+- name: enable lxd-resolved
+  service: { name: lxd-resolved, enabled: yes }
+- name: restart lxd-resolved
+  service: { name: lxd-resolved, state: restarted }
