gen image for buildkite based (nightly) release-builder
- builds releases for all OSes using virtualbox
- uploads tarballs to S3
- updates downloads.dlang.org/nightlies index pages

--- a/ansible/roles/common/handlers/main.yml
+++ b/ansible/roles/common/handlers/main.yml
@@ -7,3 +7,5 @@
   service: { name: sshd, state: restarted }
 - name: newaliases
   command: newaliases
+- name: apt-get update
+  apt: { update_cache: yes }
