--- a/ansible/roles/buildkite_agent/defaults/main.yml
+++ b/ansible/roles/buildkite_agent/defaults/main.yml
@@ -2,3 +2,4 @@
 agent_version: 3.4.0
 priority: 5 # Higher priority agents are assigned work first
 stop_timeout: 5min # systemd TimeoutStopSec for graceful agent shutdown
+agent_tags: '"queue=default,memory=high"'
