--- a/ansible/roles/buildkite_agent/tasks/main.yml
+++ b/ansible/roles/buildkite_agent/tasks/main.yml
@@ -1,4 +1,6 @@
 ---
+- name: install apt-transport-https
+  apt: { name: apt-transport-https, install_recommends: no }
 - name: add buildkite-agent apt key
   apt_key: { keyserver: keyserver.ubuntu.com, id: 32A37959C2FA5C3C99EFBC32A79206696452D198 }
 - name: add buildkite-agent apt repo
@@ -12,7 +14,7 @@
     line: "{{ item.key }}={{item.value}}"
   with_dict:
     token: '"{{ buildkite_agent_token }}"'
-    tags: '"queue=default,memory=high"'
+    tags: "{{ agent_tags }}"
     priority: "{{ priority }}"
   notify: restart buildkite-agent
 - name: create systemd service drop-in
