--- a/ansible/ci.yml
+++ b/ansible/ci.yml
@@ -130,7 +130,7 @@
     - vars/passwords.yml # buildkite_agent_token
   roles:
     - role: buildkite_agent
-      priority: 1
+      priority: 5 # Higher priority agents are assigned work first
       tags: buildkite_agent
 
 - hosts: ci.dlang.io
