regularly request dlang-bot to shutdown agents
- shortly before the next billing hour starts

--- a/ansible/roles/buildkite_agent/handlers/main.yml
+++ b/ansible/roles/buildkite_agent/handlers/main.yml
@@ -3,3 +3,5 @@
   systemd: { daemon_reload: yes }
 - name: restart buildkite-agent
   service: { name: buildkite-agent, state: restarted }
+- name: restart agent-shutdown-check.timer
+  systemd: { name: agent-shutdown-check.timer, state: restarted }
