--- a/ansible/roles/buildkite_agent/tasks/main.yml
+++ b/ansible/roles/buildkite_agent/tasks/main.yml
@@ -45,3 +45,6 @@
   notify: systemctl daemon-reload
 - name: enable buildkite-agent
   service: { name: buildkite-agent, enabled: yes, state: started }
+
+- include_tasks: agent_shutdown_check.yml
+  when: inventory_hostname in groups.buildkite_demand_agents
