add missing dependency on ninja-build
- used by ldc's cmake build

--- a/ansible/ci.yml
+++ b/ansible/ci.yml
@@ -86,6 +86,7 @@
         - llvm-3.9-dev # ldc
         - mongodb-server
         - moreutils # sponge et.al.
+        - ninja-build # ldc
         - pkg-config
         - python-dev
         - python-yaml
