Retry nightly builds up to 3 times

--- a/buildkite/build_release_pipeline.yml
+++ b/buildkite/build_release_pipeline.yml
@@ -8,3 +8,6 @@ steps:
       - './buildkite/build_release.sh'
     agents:
       queue: release-builder
+    retry:
+      automatic:
+        limit: 2
