Add sqlite3 dependency for dlang-bot

--- a/buildkite/Dockerfile
+++ b/buildkite/Dockerfile
@@ -1,7 +1,7 @@
 FROM buildkite/agent:ubuntu
 
 ADD travis_get_script /usr/local/bin/get_travis_test_script
-RUN apt-get update && apt-get install -y build-essential cmake curl gdb git jq libblas-dev \
+RUN apt-get update && apt-get install -y build-essential cmake curl gdb git jq sqlite3 libblas-dev \
     libbz2-dev libcairo-dev libcurl4-gnutls-dev libevent-dev libgcrypt20-dev libgpg-error-dev \
     libgtk-3-0 liblapack-dev liblzo2-dev libopenblas-dev libreadline-dev libssl-dev libxml2-dev \
     libxslt1-dev libzmq3-dev mongodb-server moreutils ninja-build \
