--- a/ansible/gen_release-builder_scaleway_image.yml
+++ b/ansible/gen_release-builder_scaleway_image.yml
@@ -141,7 +141,7 @@
         mode: 0400
     - name: install dmd
       apt:
-        deb: http://downloads.dlang.org/releases/2.x/2.082.0/dmd_2.082.0-0_amd64.deb
+        deb: https://downloads.dlang.org/releases/2.x/2.082.0/dmd_2.082.0-0_amd64.deb
     - name: copy gpg sign key
       copy:
         src: files/nightly-bot-signkey.gpg
